inventory/dev-maverick/ingresses/nginx-ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-ingress
    chart: nginx-ingress-0.22.1
    component: controller
    heritage: Tiller
    release: nginx-ingress
  name: nginx-ingress-controller
  selfLink: /api/v1/namespaces/nginx-ingress/services/nginx-ingress-controller
spec:
  externalIPs:
  - 10.117.29.132
  - 10.117.29.190
  - 10.117.29.191
  - 10.117.29.192
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 31990
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 32215
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: nginx-ingress
    component: controller
    release: nginx-ingress
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
