inventory/dev-maverick/ingresses/ingress-kibana-logging.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-kibana-logging
  namespace: kube-system
spec:
  rules:
  - host: nitro.solidfire.net
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
        path: /kibana-logging
